# upm

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cmds.rs  detect.rs  execute.rs  init.rs  main.rs
