[package]
name = "upm"
version = "0.1.0"
edition = "2021"
description = "Universal Package Manager can be used on top of NPM, PNPM, Yarn, Poetry, Cargo and more"

[package.metadata.bundle]
identifier = "io.github.rajaniraiyn.upm"
linux_use_terminal = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inquire = "0.7.2"
serde_json = "1.0.109"
serde = "1.0.185"

